[metadata]
name = hum
version = 0.1.18
url = https://github.com/otosense/hum
platforms = any
description_file = README.md
description = Generate synthetic signals for ML pipelines
license = mit
keywords =
    data
    signal processing
    audio
root_url = https://github.com/otosense
author = OtoSense
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    argh
    IPython
    matplotlib
    numpy
    packaging
    pandas
    scipy
    soundfile
    scikit-learn
    i2
    slink
    
