[metadata]
name = hum
version = 0.1.33
url = https://github.com/thorwhalen/hum
platforms = any
description_file = README.md
description = A python synthesizer for creating and manipulating audio signals.
license = mit
keywords =
    data
    signal processing
    audio
root_url = https://github.com/thorwhalen

long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    argh
    IPython
    matplotlib
    numpy
    recode
    i2 
    pyo

