[metadata]
name = hum
version = 1.0.6
url = https://github.com/thorwhalen/hum
platforms = any
description_file = README.md
description = A python synthesizer for creating and manipulating audio signals.
license = mit
keywords = 
	signal processing
	audio generation
	data
	synthesizer
	sonification
root_url = https://github.com/thorwhalen
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	IPython
	matplotlib
	numpy
	recode
	pyo
	scipy

[options.extras_require]
testing = 
	pytest
	scipy

